User tasks given route (#141)
* UPDATE: user tasks given

https://app.clickup.com/t/86c5bujvx

* update api docs

* small fix and add some tests
